--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </h1></div>
 <div class="after">
 <div class="top">
-<h1>catt<span class="small">#4405</span></h1>
+<h1>fbi<span class="small"></span></h1>
 <div class="socials">
 <a href="https://discord.com/users/1116732014792540220"><i class="fa-brands fa-discord"></i></a>
 <a href="https://t.me/tcpcat"><i class="fa-brands fa-telegram"></i></a>
